manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: network-part2
  labels:
    app: front
spec:
  selector:
    matchLabels:
      app: front
  replicas: 3
  template:
    metadata:
      labels:
        app: front
        component: network2
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.4
          ports:
           - containerPort: 80
