manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: network-part2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontback-service
                port:
                  number: 9001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: frontback-service
                port:
                  number: 9002
